--- a/public/sass/src/main.scss
+++ b/public/sass/src/main.scss
@@ -6,7 +6,7 @@
 * {
     padding: 0;
     margin: 0;
-    border-size: 0;
+    border: none;
     box-sizing: border-box;
     color: white;
     background: black;
