renamed menu.scss and fixed typo

--- a/public/styles/src/main.scss
+++ b/public/styles/src/main.scss
@@ -1,6 +1,6 @@
 @import "bourbon";
 @import "neat";
-@import "components/_menu-button";
+@import "components/_menu";
 @import "components/_search-bar";
 
 * {
